--- a/c/html/develop/igraph-Community.html
+++ b/c/html/develop/igraph-Community.html
@@ -1177,7 +1177,7 @@ with positive and negative links, <a class="ulink" href="http://arxiv.org/abs/08
 <tr>
 <td><p><span class="term"><em class="parameter"><code>parupdate</code></em>:</span></p></td>
 <td><p>
-  A logical constant, whether to update all spins in
+  A Boolean constant, whether to update all spins in
     parallel. It is not implemented in the <code class="constant">IGRAPH_SPINCOMM_INP_NEG</code>
     implementation.
 </p></td>
@@ -2387,7 +2387,7 @@ Analysis of Weighted Networks, Phys. Rev. E 70, 9 (2004).
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical constant. Controls whether to calculate directed
+  Boolean constant. Controls whether to calculate directed
    betweenness (i.e. directed paths) for directed graphs, and whether
    to use the directed version of modularity. It is ignored for undirected
    graphs.
@@ -3304,7 +3304,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
 
     <span class="emphasis"><em>/* Use degrees as vertex weights for optimizing modularity */</em></span>
     <span class="strong"><strong><a class="link" href="igraph-Data-structures.html#igraph_vector_init" title="2.2.1. igraph_vector_init — Initializes a vector object (constructor).">igraph_vector_init</a></strong></span>(&amp;weights, <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_vcount" title="4.2.1. igraph_vcount — The number of vertices in a graph.">igraph_vcount</a></strong></span>(&amp;graph));
-    <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_strength" title="10.11. igraph_strength — Strength of the vertices, also called weighted vertex degree.">igraph_strength</a></strong></span>(&amp;graph, &amp;weights, <span class="strong"><strong><a class="link" href="igraph-Iterators.html#igraph_vss_all" title="4.1. igraph_vss_all — All vertices of a graph (immediate version).">igraph_vss_all</a></strong></span>(), IGRAPH_ALL, <span class="emphasis"><em>/*loops*/</em></span> true, NULL);
+    <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_strength" title="10.11. igraph_strength — Strength of the vertices, also called weighted vertex degree.">igraph_strength</a></strong></span>(&amp;graph, &amp;weights, <span class="strong"><strong><a class="link" href="igraph-Iterators.html#igraph_vss_all" title="4.1. igraph_vss_all — All vertices of a graph (immediate version).">igraph_vss_all</a></strong></span>(), IGRAPH_ALL, IGRAPH_LOOPS, NULL);
 
     <span class="emphasis"><em>/* Perform Leiden algorithm using modularity until stable iteration */</em></span>
     <span class="strong"><strong><a class="link" href="igraph-Community.html#igraph_community_leiden" title="6.3. igraph_community_leiden — Finding community structure using the Leiden algorithm.">igraph_community_leiden</a></strong></span>(&amp;graph, NULL, &amp;weights, 1.0 / (2 * <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_ecount" title="4.2.2. igraph_ecount — The number of edges in a graph.">igraph_ecount</a></strong></span>(&amp;graph)), 0.01, 0, -1, &amp;membership, &amp;nb_clusters, &amp;quality);
@@ -3993,7 +3993,7 @@ Scientific Reports 14, 8124 (2024)
 <tbody><tr>
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
-  <a class="link" href="igraph-Structural.html#igraph_voronoi" title="3.34. igraph_voronoi — Voronoi partitioning of a graph."><code class="function">igraph_voronoi()</code></a>, <a class="link" href="igraph-Structural.html#igraph_ecc" title="16.5. igraph_ecc — Edge clustering coefficient of some edges."><code class="function">igraph_ecc()</code></a>.
+  <a class="link" href="igraph-Structural.html#igraph_voronoi" title="3.28. igraph_voronoi — Voronoi partitioning of a graph."><code class="function">igraph_voronoi()</code></a>, <a class="link" href="igraph-Structural.html#igraph_ecc" title="16.5. igraph_ecc — Edge clustering coefficient of some edges."><code class="function">igraph_ecc()</code></a>.
   </p></td>
 </tr></tbody>
 </table></div>
