--- a/c/html/develop/igraph-Data-structures.html
+++ b/c/html/develop/igraph-Data-structures.html
@@ -17660,7 +17660,7 @@ igraph_error_t igraph_sparsemat(igraph_t *graph, const igraph_sparsemat_t *A,
 
 One edge is created for each non-zero entry in the matrix. If you
 have a symmetric matrix, and want to create an undirected graph,
-then delete the entries in the upper diagonal first, or call <a class="link" href="igraph-Operators.html#igraph_simplify" title="3.8. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a> on the result graph to eliminate the multiple
+then delete the entries in the upper diagonal first, or call <a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a> on the result graph to eliminate the multiple
 edges.
 
 </p>
@@ -23375,7 +23375,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_adjlist_init(const igraph_t *graph, igraph_adjlist_t *al,
                         igraph_neimode_t mode, igraph_loops_t loops,
-                        igraph_multiple_t multiple);
+                        igraph_bool_t multiple);
 </pre></div>
 <p>
 </p>
@@ -24344,7 +24344,7 @@ igraph_error_t igraph_lazy_adjlist_init(const igraph_t *graph,
                              igraph_lazy_adjlist_t *al,
                              igraph_neimode_t mode,
                              igraph_loops_t loops,
-                             igraph_multiple_t multiple);
+                             igraph_bool_t multiple);
 </pre></div>
 <p>
 </p>
