--- a/c/html/develop/igraph-HRG.html
+++ b/c/html/develop/igraph-HRG.html
@@ -417,7 +417,7 @@ igraph_error_t igraph_hrg_fit(const igraph_t *graph,
 <tr>
 <td><p><span class="term"><em class="parameter"><code>start</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to start the fitting from the given
+  Whether to start the fitting from the given
   HRG model.
 </p></td>
 </tr>
@@ -518,7 +518,7 @@ The calculation can be started from the given HRG (<em class="parameter"><code>h
 <tr>
 <td><p><span class="term"><em class="parameter"><code>start</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to use the supplied HRG (in <em class="parameter"><code>hrg</code></em>)
+  Whether to use the supplied HRG (in <em class="parameter"><code>hrg</code></em>)
   as a starting point for the MCMC.
 </p></td>
 </tr>
@@ -904,7 +904,7 @@ that an edge was falsely observed as non-existent in the network.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>start</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to start the MCMC from the given HRG.
+  Whether to start the MCMC from the given HRG.
 </p></td>
 </tr>
 <tr>
