--- a/c/html/develop/igraph-Layout.html
+++ b/c/html/develop/igraph-Layout.html
@@ -379,7 +379,11 @@ anything like that, so a stable fixed point is not guaranteed.)
 
 </p>
 <p>
-See also <a class="ulink" href="http://www.schmuhl.org/graphopt/" target="_top">http://www.schmuhl.org/graphopt/</a> for the original graphopt.
+See also
+<a class="ulink" href="https://web.archive.org/web/20220611030748/http://www.schmuhl.org/graphopt/" target="_top">https://web.archive.org/web/20220611030748/http://www.schmuhl.org/graphopt/</a>
+and
+<a class="ulink" href="https://sourceforge.net/projects/graphopt/" target="_top">https://sourceforge.net/projects/graphopt/</a>
+for the original graphopt.
 
 </p>
 <p><b>Arguments: </b>
@@ -1235,7 +1239,7 @@ Software -- Practice and Experience, 21/11, 1129--1164,
 <tr>
 <td><p><span class="term"><em class="parameter"><code>use_seed</code></em>:</span></p></td>
 <td><p>
-  Logical, if true the supplied values in the
+  If true the supplied values in the
        <em class="parameter"><code>res</code></em> argument are used as an initial layout, if
        false a random initial layout is used.
 </p></td>
@@ -2668,7 +2672,7 @@ UMAP: Uniform Manifold Approximation and Projection for Dimension Reduction (202
 <tr>
 <td><p><span class="term"><em class="parameter"><code>use_seed</code></em>:</span></p></td>
 <td><p>
-  Logical, if <code class="constant">true</code> the supplied values in the <em class="parameter"><code>res</code></em> argument are
+  If <code class="constant">true</code> the supplied values in the <em class="parameter"><code>res</code></em> argument are
   used as an initial layout, if <code class="constant">false</code> a random initial layout is used.
 </p></td>
 </tr>
@@ -3172,7 +3176,7 @@ See <a class="link" href="igraph-Layout.html#igraph_layout_fruchterman_reingold"
 <tr>
 <td><p><span class="term"><em class="parameter"><code>use_seed</code></em>:</span></p></td>
 <td><p>
-  Logical, if true the supplied values in the
+  If true the supplied values in the
        <em class="parameter"><code>res</code></em> argument are used as an initial layout, if
        false a random initial layout is used.
 </p></td>
@@ -3500,7 +3504,7 @@ major version of igraph. Use it at your own risk.</p>
 <tr>
 <td><p><span class="term"><em class="parameter"><code>use_seed</code></em>:</span></p></td>
 <td><p>
-  Logical, if true the supplied values in the <em class="parameter"><code>res</code></em> argument are used
+  If true the supplied values in the <em class="parameter"><code>res</code></em> argument are used
   as an initial layout, if false a random initial layout is used.
 </p></td>
 </tr>
