--- a/c/html/develop/igraph-Motifs.html
+++ b/c/html/develop/igraph-Motifs.html
@@ -900,8 +900,10 @@ int <span class="strong"><strong>main</strong></span>(void) {
 <a class="indexterm" name="id-1.20.6.3.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_error_t igraph_motifs_randesu_no(const igraph_t *graph, igraph_integer_t *no,
-                             igraph_integer_t size, const igraph_vector_t *cut_prob);
+igraph_error_t igraph_motifs_randesu_no(
+    const igraph_t *graph, igraph_real_t *no, igraph_integer_t size,
+    const igraph_vector_t *cut_prob
+);
 </pre></div>
 <p>
 </p>
@@ -931,8 +933,10 @@ classes to them. Arbitrarily large motif sizes are supported.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>no</code></em>:</span></p></td>
 <td><p>
-  Pointer to an integer type, the result will be stored
-       here.
+  Pointer to an <code class="constant">igraph_real_t</code>, the result will be stored here.
+       Note that even though the result is an integer, we need to use
+       <code class="constant">igraph_real_t</code> to avoid overflow when igraph is compiled with
+       32-bit integers.
 </p></td>
 </tr>
 <tr>
@@ -995,7 +999,7 @@ Time complexity: TODO.
 <a class="indexterm" name="id-1.20.6.4.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_error_t igraph_motifs_randesu_estimate(const igraph_t *graph, igraph_integer_t *est,
+igraph_error_t igraph_motifs_randesu_estimate(const igraph_t *graph, igraph_real_t *est,
                                    igraph_integer_t size, const igraph_vector_t *cut_prob,
                                    igraph_integer_t sample_size,
                                    const igraph_vector_int_t *parsample);
@@ -1043,7 +1047,10 @@ the search tree.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>est</code></em>:</span></p></td>
 <td><p>
-  Pointer to an integer, the result will be stored here.
+  Pointer to an <code class="constant">igraph_real_t</code>, the result will be stored here.
+       Note that even though the result is an integer, we need to use
+       <code class="constant">igraph_real_t</code> to avoid overflow when igraph is compiled with
+       32-bit integers.
 </p></td>
 </tr>
 <tr>
