--- a/c/html/develop/igraph-Nongraph.html
+++ b/c/html/develop/igraph-Nongraph.html
@@ -338,20 +338,20 @@ int <span class="strong"><strong>main</strong></span>(void) {
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a name="random-sampling-of-spatial-points"></a>4. Random sampling of spatial points</h2></div></div></div>
 <div class="toc"><dl class="toc">
-<dt><span class="section"><a href="igraph-Nongraph.html#igraph_sample_sphere_surface">4.1. <code class="function">igraph_sample_sphere_surface</code> —  Sample points uniformly from the surface of a sphere.</a></span></dt>
-<dt><span class="section"><a href="igraph-Nongraph.html#igraph_sample_sphere_volume">4.2. <code class="function">igraph_sample_sphere_volume</code> —  Sample points uniformly from the volume of a sphere.</a></span></dt>
-<dt><span class="section"><a href="igraph-Nongraph.html#igraph_sample_dirichlet">4.3. <code class="function">igraph_sample_dirichlet</code> —  Sample points from a Dirichlet distribution.</a></span></dt>
+<dt><span class="section"><a href="igraph-Nongraph.html#igraph_rng_sample_sphere_surface">4.1. <code class="function">igraph_rng_sample_sphere_surface</code> —  Sample points uniformly from the surface of a sphere.</a></span></dt>
+<dt><span class="section"><a href="igraph-Nongraph.html#igraph_rng_sample_sphere_volume">4.2. <code class="function">igraph_rng_sample_sphere_volume</code> —  Sample points uniformly from the volume of a sphere.</a></span></dt>
+<dt><span class="section"><a href="igraph-Nongraph.html#igraph_rng_sample_dirichlet">4.3. <code class="function">igraph_rng_sample_dirichlet</code> —  Sample points from a Dirichlet distribution.</a></span></dt>
 </dl></div>
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
-<a name="igraph_sample_sphere_surface"></a>4.1. <code class="function">igraph_sample_sphere_surface</code> —  Sample points uniformly from the surface of a sphere.</h3></div></div></div>
+<a name="igraph_rng_sample_sphere_surface"></a>4.1. <code class="function">igraph_rng_sample_sphere_surface</code> —  Sample points uniformly from the surface of a sphere.</h3></div></div></div>
 <a class="indexterm" name="id-1.33.5.2.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_error_t igraph_sample_sphere_surface(igraph_integer_t dim, igraph_integer_t n,
-                                 igraph_real_t radius,
-                                 igraph_bool_t positive,
-                                 igraph_matrix_t *res);
+igraph_error_t igraph_rng_sample_sphere_surface(
+    igraph_rng_t* rng, igraph_integer_t dim, igraph_integer_t n, igraph_real_t radius,
+    igraph_bool_t positive, igraph_matrix_t *res
+);
 </pre></div>
 <p>
 </p>
@@ -370,6 +370,12 @@ The center of the sphere is at the origin.
 <col>
 </colgroup>
 <tbody>
+<tr>
+<td><p><span class="term"><em class="parameter"><code>rng</code></em>:</span></p></td>
+<td><p>
+  The random number generator to use.
+</p></td>
+</tr>
 <tr>
 <td><p><span class="term"><em class="parameter"><code>dim</code></em>:</span></p></td>
 <td><p>
@@ -435,7 +441,7 @@ generating a standard normal random number.
 <tbody><tr>
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
-  <a class="link" href="igraph-Nongraph.html#igraph_sample_sphere_volume" title="4.2. igraph_sample_sphere_volume — Sample points uniformly from the volume of a sphere."><code class="function">igraph_sample_sphere_volume()</code></a>, <a class="link" href="igraph-Nongraph.html#igraph_sample_dirichlet" title="4.3. igraph_sample_dirichlet — Sample points from a Dirichlet distribution."><code class="function">igraph_sample_dirichlet()</code></a> for other similar samplers.
+  <a class="link" href="igraph-Nongraph.html#igraph_rng_sample_sphere_volume" title="4.2. igraph_rng_sample_sphere_volume — Sample points uniformly from the volume of a sphere."><code class="function">igraph_rng_sample_sphere_volume()</code></a>, <a class="link" href="igraph-Nongraph.html#igraph_rng_sample_dirichlet" title="4.3. igraph_rng_sample_dirichlet — Sample points from a Dirichlet distribution."><code class="function">igraph_rng_sample_dirichlet()</code></a> for other similar samplers.
   </p></td>
 </tr></tbody>
 </table></div>
@@ -445,14 +451,14 @@ generating a standard normal random number.
 </div>
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
-<a name="igraph_sample_sphere_volume"></a>4.2. <code class="function">igraph_sample_sphere_volume</code> —  Sample points uniformly from the volume of a sphere.</h3></div></div></div>
+<a name="igraph_rng_sample_sphere_volume"></a>4.2. <code class="function">igraph_rng_sample_sphere_volume</code> —  Sample points uniformly from the volume of a sphere.</h3></div></div></div>
 <a class="indexterm" name="id-1.33.5.3.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_error_t igraph_sample_sphere_volume(igraph_integer_t dim, igraph_integer_t n,
-                                igraph_real_t radius,
-                                igraph_bool_t positive,
-                                igraph_matrix_t *res);
+igraph_error_t igraph_rng_sample_sphere_volume(
+    igraph_rng_t* rng, igraph_integer_t dim, igraph_integer_t n, igraph_real_t radius,
+    igraph_bool_t positive, igraph_matrix_t *res
+);
 </pre></div>
 <p>
 </p>
@@ -471,6 +477,12 @@ The center of the sphere is at the origin.
 <col>
 </colgroup>
 <tbody>
+<tr>
+<td><p><span class="term"><em class="parameter"><code>rng</code></em>:</span></p></td>
+<td><p>
+  The random number generator to use.
+</p></td>
+</tr>
 <tr>
 <td><p><span class="term"><em class="parameter"><code>dim</code></em>:</span></p></td>
 <td><p>
@@ -536,7 +548,7 @@ generating a standard normal random number.
 <tbody><tr>
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
-  <a class="link" href="igraph-Nongraph.html#igraph_sample_sphere_surface" title="4.1. igraph_sample_sphere_surface — Sample points uniformly from the surface of a sphere."><code class="function">igraph_sample_sphere_surface()</code></a>, <a class="link" href="igraph-Nongraph.html#igraph_sample_dirichlet" title="4.3. igraph_sample_dirichlet — Sample points from a Dirichlet distribution."><code class="function">igraph_sample_dirichlet()</code></a> for other similar samplers.
+  <a class="link" href="igraph-Nongraph.html#igraph_rng_sample_sphere_surface" title="4.1. igraph_rng_sample_sphere_surface — Sample points uniformly from the surface of a sphere."><code class="function">igraph_rng_sample_sphere_surface()</code></a>, <a class="link" href="igraph-Nongraph.html#igraph_rng_sample_dirichlet" title="4.3. igraph_rng_sample_dirichlet — Sample points from a Dirichlet distribution."><code class="function">igraph_rng_sample_dirichlet()</code></a> for other similar samplers.
   </p></td>
 </tr></tbody>
 </table></div>
@@ -546,12 +558,14 @@ generating a standard normal random number.
 </div>
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
-<a name="igraph_sample_dirichlet"></a>4.3. <code class="function">igraph_sample_dirichlet</code> —  Sample points from a Dirichlet distribution.</h3></div></div></div>
+<a name="igraph_rng_sample_dirichlet"></a>4.3. <code class="function">igraph_rng_sample_dirichlet</code> —  Sample points from a Dirichlet distribution.</h3></div></div></div>
 <a class="indexterm" name="id-1.33.5.4.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_error_t igraph_sample_dirichlet(igraph_integer_t n, const igraph_vector_t *alpha,
-                            igraph_matrix_t *res);
+igraph_error_t igraph_rng_sample_dirichlet(
+    igraph_rng_t* rng, igraph_integer_t n, const igraph_vector_t *alpha,
+    igraph_matrix_t *res
+);
 </pre></div>
 <p>
 </p>
@@ -568,6 +582,12 @@ igraph_error_t igraph_sample_dirichlet(igraph_integer_t n, const igraph_vector_t
 <col>
 </colgroup>
 <tbody>
+<tr>
+<td><p><span class="term"><em class="parameter"><code>rng</code></em>:</span></p></td>
+<td><p>
+  The random number generator to use.
+</p></td>
+</tr>
 <tr>
 <td><p><span class="term"><em class="parameter"><code>n</code></em>:</span></p></td>
 <td><p>
@@ -622,8 +642,8 @@ complexity of sampling from a Gamma distribution.
 <tbody><tr>
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
-  <a class="link" href="igraph-Nongraph.html#igraph_sample_sphere_surface" title="4.1. igraph_sample_sphere_surface — Sample points uniformly from the surface of a sphere."><code class="function">igraph_sample_sphere_surface()</code></a> and
-<a class="link" href="igraph-Nongraph.html#igraph_sample_sphere_volume" title="4.2. igraph_sample_sphere_volume — Sample points uniformly from the volume of a sphere."><code class="function">igraph_sample_sphere_volume()</code></a> for other methods to sample
+  <a class="link" href="igraph-Nongraph.html#igraph_rng_sample_sphere_surface" title="4.1. igraph_rng_sample_sphere_surface — Sample points uniformly from the surface of a sphere."><code class="function">igraph_rng_sample_sphere_surface()</code></a> and
+<a class="link" href="igraph-Nongraph.html#igraph_rng_sample_sphere_volume" title="4.2. igraph_rng_sample_sphere_volume — Sample points uniformly from the volume of a sphere."><code class="function">igraph_rng_sample_sphere_volume()</code></a> for other methods to sample
 latent vectors.
   </p></td>
 </tr></tbody>
