--- a/c/html/develop/igraph-Tutorial.html
+++ b/c/html/develop/igraph-Tutorial.html
@@ -54,8 +54,9 @@ int <span class="strong"><strong>main</strong></span>(void) {
     IGRAPH_UNDIRECTED, IGRAPH_NO_LOOPS, IGRAPH_NO_MULTIPLE
   );
 
-  <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_diameter" title="3.23. igraph_diameter — Calculates the diameter of a graph (longest geodesic).">igraph_diameter</a></strong></span>(
-    &amp;graph, &amp;diameter,
+  <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_diameter" title="3.22. igraph_diameter — Calculates the weighted diameter of a graph using Dijkstra's algorithm.">igraph_diameter</a></strong></span>(
+    &amp;graph, <span class="emphasis"><em>/* weights = */</em></span> NULL,
+    &amp;diameter,
     <span class="emphasis"><em>/* from = */</em></span> NULL, <span class="emphasis"><em>/* to = */</em></span> NULL,
     <span class="emphasis"><em>/* vertex_path = */</em></span> NULL, <span class="emphasis"><em>/* edge_path = */</em></span> NULL,
     IGRAPH_UNDIRECTED, <span class="emphasis"><em>/* unconn= */</em></span> true
@@ -282,7 +283,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
   <span class="strong"><strong>igraph_vector_bool_fill</strong></span>(&amp;periodic, true);
   <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_square_lattice" title="1.11. igraph_square_lattice — Arbitrary dimensional square lattices.">igraph_square_lattice</a></strong></span>(&amp;graph, &amp;dimvector, 0, IGRAPH_UNDIRECTED, <span class="emphasis"><em>/* mutual= */</em></span> false, &amp;periodic);
 
-  <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_average_path_length" title="3.20. igraph_average_path_length — The average unweighted shortest path length between all vertex pairs.">igraph_average_path_length</a></strong></span>(&amp;graph, &amp;avg_path_len, NULL, IGRAPH_UNDIRECTED, <span class="emphasis"><em>/* unconn= */</em></span> true);
+  <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_average_path_length" title="3.20. igraph_average_path_length — The average shortest path length between all vertex pairs.">igraph_average_path_length</a></strong></span>(&amp;graph, NULL, &amp;avg_path_len, NULL, IGRAPH_UNDIRECTED, <span class="emphasis"><em>/* unconn= */</em></span> true);
   <span class="strong"><strong>printf</strong></span>("Average path length (lattice):            %g\n", (double) avg_path_len);
 
   <span class="strong"><strong><a class="link" href="igraph-Random.html#igraph_rng_seed" title="3.3. igraph_rng_seed — Seeds a random number generator.">igraph_rng_seed</a></strong></span>(<span class="strong"><strong><a class="link" href="igraph-Random.html#igraph_rng_default" title="2.1. igraph_rng_default — Query the default random number generator.">igraph_rng_default</a></strong></span>(), 42); <span class="emphasis"><em>/* seed RNG before first use */</em></span>
@@ -292,7 +293,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
   }
 
   <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_add_edges" title="4.3.2. igraph_add_edges — Adds edges to a graph object.">igraph_add_edges</a></strong></span>(&amp;graph, &amp;edges, NULL);
-  <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_average_path_length" title="3.20. igraph_average_path_length — The average unweighted shortest path length between all vertex pairs.">igraph_average_path_length</a></strong></span>(&amp;graph, &amp;avg_path_len, NULL, IGRAPH_UNDIRECTED, <span class="emphasis"><em>/* unconn= */</em></span> true);
+  <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_average_path_length" title="3.20. igraph_average_path_length — The average shortest path length between all vertex pairs.">igraph_average_path_length</a></strong></span>(&amp;graph, NULL, &amp;avg_path_len, NULL, IGRAPH_UNDIRECTED, <span class="emphasis"><em>/* unconn= */</em></span> true);
   <span class="strong"><strong>printf</strong></span>("Average path length (randomized lattice): %g\n", (double) avg_path_len);
 
   <span class="strong"><strong>igraph_vector_bool_destroy</strong></span>(&amp;periodic);
@@ -352,7 +353,7 @@ between the same pair of vertices.
 <span class="type">igraph_t</span> can of course represent loops and multiple edges, although some
 routines expect simple graphs, i.e. graphs which contain neither of these. This is because some
 structural properties are ill-defined for non-simple graphs. Loop and multi-edges can be removed by calling
-<a class="link" href="igraph-Operators.html#igraph_simplify" title="3.8. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a>.
+<a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a>.
 </p>
 </div>
 <div class="section">
