--- a/c/html/develop/index.html
+++ b/c/html/develop/index.html
@@ -63,9 +63,9 @@ langversion: develop
 </div>
 </div>
 </div></div>
-<div><p class="releaseinfo">0.10.15-646-gd44fe5bca</p></div>
+<div><p class="releaseinfo">0.10.16-610-gb9efa5de8</p></div>
 <div><div class="legalnotice">
-<a name="id-1.1.4"></a><p>This manual is for igraph, version 0.10.15-646-gd44fe5bca.</p>
+<a name="id-1.1.4"></a><p>This manual is for igraph, version 0.10.16-610-gb9efa5de8.</p>
 <p>
       Copyright (C) 2005-2019 Gábor Csárdi and Tamás Nepusz.
       Copyright (C) 2020-2025 igraph development team.
