--- a/c/html/master/igraph-Community.html
+++ b/c/html/master/igraph-Community.html
@@ -1217,7 +1217,7 @@ with positive and negative links, <a class="ulink" href="http://arxiv.org/abs/08
 <tr>
 <td><p><span class="term"><em class="parameter"><code>parupdate</code></em>:</span></p></td>
 <td><p>
-  A logical constant, whether to update all spins in
+  A Boolean constant, whether to update all spins in
     parallel. It is not implemented in the <code class="constant">IGRAPH_SPINCOMM_INP_NEG</code>
     implementation.
 </p></td>
@@ -2390,7 +2390,7 @@ Proc. Nat. Acad. Sci. USA 99, 7821-7826 (2002).
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical constant. Controls whether to calculate directed
+  Boolean constant. Controls whether to calculate directed
    betweenness (i.e. directed paths) for directed graphs, and whether
    to use the directed version of modularity. It is ignored for undirected
    graphs.
