--- a/c/html/master/igraph-Foreign.html
+++ b/c/html/master/igraph-Foreign.html
@@ -113,7 +113,7 @@ vertices are specified by name instead of by a numerical vertex ID.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical, if true the graph is directed, if false it
+  If true the graph is directed, if false it
        will be undirected.
 </p></td>
 </tr>
@@ -291,7 +291,7 @@ these.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>names</code></em>:</span></p></td>
 <td><p>
-  Logical value, if <code class="constant">true</code> the symbolic names of the
+  Boolean value. If <code class="constant">true</code>, the symbolic names of the
        vertices will be added to the graph as a vertex attribute
        called <span class="quote">“<span class="quote">name</span>”</span>.
 </p></td>
@@ -546,7 +546,7 @@ in <span class="command"><strong>igraph</strong></span> it is not an error to ha
 <tr>
 <td><p><span class="term"><em class="parameter"><code>names</code></em>:</span></p></td>
 <td><p>
-  Logical value, if <code class="constant">true</code> the symbolic names of the
+  Boolean value, if <code class="constant">true</code> the symbolic names of the
        vertices will be added to the graph as a vertex attribute
        called <span class="quote">“<span class="quote">name</span>”</span>.
 </p></td>
@@ -757,8 +757,8 @@ does not check for this condition.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>isolates</code></em>:</span></p></td>
 <td><p>
-  Logical, if <code class="constant">true</code> isolated vertices are also written
-       to the file. If <code class="constant">false</code> they will be omitted.
+  If <code class="constant">true</code>, isolated vertices are also written
+       to the file. If <code class="constant">false</code>, they will be omitted.
 </p></td>
 </tr>
 </tbody>
@@ -1162,6 +1162,20 @@ first node of the graph has index 0.</p>
 </blockquote></div>
 <p>
 As of igraph 0.10, only unlabelled graphs are implemented.
+</p>
+<p>
+References:
+</p>
+<p>
+M. De Santo, P. Foggia, C. Sansone, and M. Vento:
+A large database of graphs and its use for benchmarking graph isomorphism algorithms.
+Pattern Recognition Letters, 24(8), 1067-1079 (2003).
+<a class="ulink" href="https://doi.org/10.1016/S0167-8655(02)00253-2" target="_top">https://doi.org/10.1016/S0167-8655(02)00253-2</a>
+</p>
+<p>
+MIVIA ARG Dataset,
+<a class="ulink" href="https://zenodo.org/records/11204020" target="_top">https://zenodo.org/records/11204020</a>,
+<a class="ulink" href="https://mivia.unisa.it/datasets/graph-database/arg-database/" target="_top">https://mivia.unisa.it/datasets/graph-database/arg-database/</a>
 
 </p>
 <p><b>Arguments: </b>
@@ -1216,7 +1230,7 @@ number of edges.
 </p>
 <div class="hideshow" onClick="toggle(this, event)">
 <div class="example">
-<a name="id-1.22.6.2.11.1"></a><p class="title"><b>Example 21.3.  File <code class="code">examples/simple/igraph_read_graph_graphdb.c</code></b></p>
+<a name="id-1.22.6.2.14.1"></a><p class="title"><b>Example 21.3.  File <code class="code">examples/simple/igraph_read_graph_graphdb.c</code></b></p>
 <div class="example-contents">
 <pre class="programlisting"><span class="strong"><strong>#include</strong></span> &lt;igraph.h&gt;
 
@@ -1471,7 +1485,7 @@ including 31 (with the exception of tab, cr and lf), are not allowed.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>prefixattr</code></em>:</span></p></td>
 <td><p>
-  Logical value, whether to put a prefix in front of the
+  Boolean value. Whether to put a prefix in front of the
        attribute names to ensure uniqueness if the graph has vertex and
        edge (or graph) attributes with the same name.
 </p></td>
