--- a/c/html/master/igraph-Generators.html
+++ b/c/html/master/igraph-Generators.html
@@ -28,7 +28,7 @@ langversion: master
 </dl></div>
 <p>Graph generators create graphs.</p>
 <p>Almost all functions which create graph objects are documented
-here. The exceptions are <a class="link" href="igraph-Operators.html#igraph_induced_subgraph" title="3.4. igraph_induced_subgraph — Creates a subgraph induced by the specified vertices."><code class="function">igraph_induced_subgraph()</code></a> and alike, these
+here. The exceptions are <a class="link" href="igraph-Operators.html#igraph_induced_subgraph" title="3.5. igraph_induced_subgraph — Creates a subgraph induced by the specified vertices."><code class="function">igraph_induced_subgraph()</code></a> and alike, these
 create graphs based on another graph.</p>
 <div class="section">
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
@@ -267,7 +267,7 @@ undefined behaviour and likely to cause platform-specific issues.
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td>
 <p>
-  Logical constant; gives whether the graph should be
+  Boolean constant; gives whether the graph should be
        directed. Supported values are:
        </p>
 <div class="variablelist"><table border="0" class="variablelist">
@@ -950,7 +950,7 @@ recreate the igraph graph via this function.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>duplicate</code></em>:</span></p></td>
 <td><p>
-  Logical, for undirected graphs this specified
+  Boolean constant. For undirected graphs this specifies
        whether each edge is included twice, in the vectors of
        both adjacent vertices. If this is <code class="constant">false</code>, then it is
        assumed that every edge is included only once. This argument
@@ -1915,7 +1915,7 @@ connected directed two-cycle contains parallel edges.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to create a directed graph.
+  Whether to create a directed graph.
        All edges will be oriented in the same direction along
        the cycle or path.
 </p></td>
@@ -1923,14 +1923,14 @@ connected directed two-cycle contains parallel edges.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>mutual</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to create mutual edges in directed
+  Whether to create mutual edges in directed
        graphs. It is ignored for undirected graphs.
 </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><em class="parameter"><code>circular</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to create a closed ring (a cycle)
+  Whether to create a closed ring (a cycle)
        or an open path.
 </p></td>
 </tr>
@@ -2731,13 +2731,13 @@ as well as to directed graphs.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to create a directed graph.
+  Whether to create a directed graph.
 </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><em class="parameter"><code>loops</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to include self-edges (loops).
+  Whether to include self-loops.
 </p></td>
 </tr>
 </tbody>
@@ -5017,7 +5017,7 @@ inserted, in the following way: vertex <code class="constant">i</code> will conn
 In other words, vertex <code class="constant">i</code> will be connected to vertex
 <code class="literal">(i + L[(i mod p)]) mod nodes</code>. If multiple edges are
 defined in this way, this will output a non-simple graph. The result
-can be simplified using <a class="link" href="igraph-Operators.html#igraph_simplify" title="3.8. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a>.
+can be simplified using <a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a>.
 
 </p>
 <p>
@@ -5205,7 +5205,7 @@ Original code contributed by Keith Briggs, thanks Keith.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>torus</code></em>:</span></p></td>
 <td><p>
-  Logical constant. If true, periodic boundary conditions
+  Boolean constant. If true, periodic boundary conditions
        will be used, i.e. the vertices are assumed to be on a torus
        instead of a square.
 </p></td>
@@ -5758,13 +5758,13 @@ and <em class="parameter"><code>m</code></em> edges is generated uniformly at ra
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to generate a directed graph.
+  Whether to generate a directed graph.
 </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><em class="parameter"><code>loops</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to generate self-loops.
+  Whether to generate self-loops.
 </p></td>
 </tr>
 </tbody>
@@ -5922,13 +5922,13 @@ in (undirected or directed) graphs without self-loops,
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to generate a directed graph.
+  Whether to generate a directed graph.
 </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><em class="parameter"><code>loops</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to generate self-loops.
+  Whether to generate self-loops.
 </p></td>
 </tr>
 </tbody>
@@ -6098,7 +6098,7 @@ Nature 393, 440-442, 1998.
 <td><p><span class="term"><em class="parameter"><code>nei</code></em>:</span></p></td>
 <td><p>
   The size of the neighborhood for each vertex. This is
-   the same as the <em class="parameter"><code>nei</code></em> argument of <a class="link" href="igraph-Operators.html#igraph_connect_neighborhood" title="3.1. igraph_connect_neighborhood — Connects each vertex to its neighborhood."><code class="function">igraph_connect_neighborhood()</code></a>.
+   the same as the <em class="parameter"><code>order</code></em> argument of <a class="link" href="igraph-Operators.html#igraph_connect_neighborhood" title="3.1. igraph_connect_neighborhood — Connects each vertex to its neighborhood."><code class="function">igraph_connect_neighborhood()</code></a>.
 </p></td>
 </tr>
 <tr>
@@ -6111,14 +6111,13 @@ Nature 393, 440-442, 1998.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>loops</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to generate loop edges.
+  Whether to generate loop edges.
 </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><em class="parameter"><code>multiple</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to allow multiple edges in the
-  generated graph.
+  Whether to allow multiple edges in the generated graph.
 </p></td>
 </tr>
 </tbody>
@@ -7898,7 +7897,7 @@ Phys. Rev. E 64, 041902 (2001).
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to generate a directed graph.
+  Whether to generate a directed graph.
 </p></td>
 </tr>
 <tr>
@@ -8011,7 +8010,7 @@ different vertex types.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to generate a directed graph.
+  Whether to generate a directed graph.
 </p></td>
 </tr>
 <tr>
@@ -8148,7 +8147,7 @@ groups only.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to generate a directed graph. If undirected
+  Whether to generate a directed graph. If undirected
   graphs are requested, only the lower left triangle of the preference
   matrix is considered.
 </p></td>
@@ -8156,7 +8155,7 @@ groups only.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>loops</code></em>:</span></p></td>
 <td><p>
-  Logical, whether loop edges are allowed.
+  Whether loop edges are allowed.
 </p></td>
 </tr>
 </tbody>
@@ -8300,7 +8299,7 @@ vertex.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>loops</code></em>:</span></p></td>
 <td><p>
-  Logical, whether loop edges are allowed.
+  Whether loop edges are allowed.
 </p></td>
 </tr>
 </tbody>
@@ -8423,7 +8422,7 @@ igraph_error_t igraph_recent_degree_game(igraph_t *graph, igraph_integer_t nodes
 <tr>
 <td><p><span class="term"><em class="parameter"><code>outpref</code></em>:</span></p></td>
 <td><p>
-  Logical constant, if true the edges originated by a
+  Boolean constant, if true the edges originated by a
        vertex also count as recent incident edges.
        For most applications it is reasonable to set it to false.
 </p></td>
@@ -8438,7 +8437,7 @@ igraph_error_t igraph_recent_degree_game(igraph_t *graph, igraph_integer_t nodes
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical constant, whether to generate a directed
+  Boolean constant, whether to generate a directed
        graph.
 </p></td>
 </tr>
@@ -8552,7 +8551,7 @@ time steps.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>outpref</code></em>:</span></p></td>
 <td><p>
-  Logical constant, whether the edges
+  Boolean constant, whether the edges
        initiated by a vertex contribute to the probability to gain
        a new edge.
 </p></td>
@@ -8607,7 +8606,7 @@ time steps.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical constant, whether to generate a directed
+  Boolean constant, whether to generate a directed
        graph.
 </p></td>
 </tr>
@@ -8711,7 +8710,7 @@ steps, l is the age of the vertex.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>outpref</code></em>:</span></p></td>
 <td><p>
-  Logical constant, if true the edges initiated by a
+  Boolean constant, if true the edges initiated by a
        vertex are also counted. Normally it is false.
 </p></td>
 </tr>
@@ -8751,7 +8750,7 @@ steps, l is the age of the vertex.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical constant, whether to create a directed
+  Boolean constant, whether to create a directed
        graph.
 </p></td>
 </tr>
@@ -8822,7 +8821,7 @@ never cited. This element should be bigger than zero.
 </p>
 <p>
 Note that this function generates networks with multiple edges if
-<em class="parameter"><code>edges_per_step</code></em> is bigger than one, call <a class="link" href="igraph-Operators.html#igraph_simplify" title="3.8. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a>
+<em class="parameter"><code>edges_per_step</code></em> is bigger than one, call <a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a>
 on the result to get rid of these edges.
 
 </p>
@@ -8874,7 +8873,7 @@ on the result to get rid of these edges.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical constant, whether to create directed
+  Boolean constant, whether to create directed
      networks.
 </p></td>
 </tr>
@@ -8946,7 +8945,7 @@ cited, as given by the <em class="parameter"><code>pref</code></em> vector.
 <p>
 Note that this function might generate networks with multiple edges
 if <em class="parameter"><code>edges_per_step</code></em> is greater than one. You might want to call
-<a class="link" href="igraph-Operators.html#igraph_simplify" title="3.8. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a> on the result to remove multiple edges.
+<a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a> on the result to remove multiple edges.
 </p>
 <p><b>Arguments: </b>
 </p>
@@ -8994,7 +8993,7 @@ if <em class="parameter"><code>edges_per_step</code></em> is greater than one. Y
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical constant, whether to create a directed
+  Boolean constant, whether to create a directed
     network.
 </p></td>
 </tr>
@@ -9076,7 +9075,7 @@ citing vertex is <code class="constant">i</code>.
 <p>
 Note that this function might generate networks with multiple edges
 if <em class="parameter"><code>edges_per_step</code></em> is greater than one. You might want to call
-<a class="link" href="igraph-Operators.html#igraph_simplify" title="3.8. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a> on the result to remove multiple edges.
+<a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a> on the result to remove multiple edges.
 </p>
 <p><b>Arguments: </b>
 </p>
@@ -9124,7 +9123,7 @@ if <em class="parameter"><code>edges_per_step</code></em> is greater than one. Y
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical constant, whether to create a directed
+  Boolean constant, whether to create a directed
     network.
 </p></td>
 </tr>
@@ -10122,13 +10121,13 @@ This function is deprecated; use <a class="link" href="igraph-Generators.html#ig
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to generate a directed graph.
+  Whether to generate a directed graph.
 </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><em class="parameter"><code>loops</code></em>:</span></p></td>
 <td><p>
-  Logical, whether to generate loops (self) edges.
+  Whether to generate loops (self) edges.
 </p></td>
 </tr>
 </tbody>
