--- a/c/html/develop/igraph-Attributes.html
+++ b/c/html/develop/igraph-Attributes.html
@@ -105,7 +105,7 @@ typedef struct igraph_attribute_table_t {
                                igraph_strvector_t *enames, igraph_vector_int_t *etypes);
     igraph_bool_t (*has_attr)(const igraph_t *graph, igraph_attribute_elemtype_t type,
                               const char *name);
-    igraph_error_t (*gettype)(const igraph_t *graph, igraph_attribute_type_t *type,
+    igraph_error_t (*get_type)(const igraph_t *graph, igraph_attribute_type_t *type,
                               igraph_attribute_elemtype_t elemtype, const char *name);
     igraph_error_t (*get_numeric_graph_attr)(const igraph_t *graph, const char *name,
                                              igraph_vector_t *value);
@@ -174,9 +174,9 @@ It has the following members:
 <td><p><span class="term"><code class="constant">copy</code>:</span></p></td>
 <td><p>
   This function is called when the C core wants to populate the
-   attributes of a graph from another graph. The struvture of the target
+   attributes of a graph from another graph. The structure of the target
    graph is already initialized by the time this function is called, and the
-   <code class="constant">attr</code> member of the graph is set to null pointer. The function is
+   <code class="constant">attr</code> member of the graph is set to a null pointer. The function is
    supposed to populate the <code class="constant">attr</code> member of the target <code class="constant">igraph_t</code> object
    to a non-null value <span class="emphasis"><em>or</em></span> return an error code. Leaving the <code class="constant">attr</code>
    member at a null value while returning success is invalid and will trigger
@@ -186,10 +186,11 @@ It has the following members:
 <tr>
 <td><p><span class="term"><code class="constant">add_vertices</code>:</span></p></td>
 <td><p>
-  Called when vertices are added to a
-   graph, before adding the vertices themselves.
-   The number of vertices to add is supplied as an
-   argument. Expected to return an error code.
+  Called when vertices are added to a graph, after the
+   base data structure was modified. The number of vertices that were added is
+   supplied as an argument. The function is supposed to set up default values
+   for each vertex attribute that is currently registered on the graph, for
+   all the newly added vertices. Expected to return an error code.
 </p></td>
 </tr>
 <tr>
@@ -199,12 +200,17 @@ It has the following members:
    existing one such that there is a mapping from the vertices of the new
    graph back to the vertices of the old graph (e.g. if vertices are removed
    from a graph). The supplied index vector defines which old vertex
-   a new vertex corresponds to. Its length must be the same as the
-   number of vertices in the new graph. Note that the old and the new graph
-   may be the same. If the two graph instances are <span class="emphasis"><em>not</em></span> the same, implementors
-   may safely assume that the new graph has no vertex attributes yet (but it
-   may already have graph or edge attributes by the time this function is
-   called).
+   a new vertex corresponds to. Its length is the same as the number of
+   vertices in the new graph, and for each new vertex it provides the ID
+   of the corresponding vertex in the old graph. The function is supposed to
+   set up the values of the vertex attributes of the new graph based on the
+   attributes of the old graph and the provided index vector. Note that the
+   old and the new graph <span class="emphasis"><em>may</em></span> be the same, in which case it is the
+   responsibility of the function to ensure that the operation can safely be
+   performed in-place. If the two graph instances are <span class="emphasis"><em>not</em></span> the same,
+   implementors may safely assume that the new graph has no vertex attributes
+   yet (but it may already have graph or edge attributes by the time this
+   function is called).
 </p></td>
 </tr>
 <tr>
@@ -212,7 +218,7 @@ It has the following members:
 <td><p>
   This function is called when the creation
    of a new graph involves a merge (contraction, etc.) of vertices
-   from another graph. The function is after the new graph was created.
+   from another graph. The function is called after the new graph was created.
    An argument specifies how several vertices from the old graph map to a
    single vertex in the new graph. It is guaranteed that the old and the
    new graph instances are different when this callback is called.
@@ -224,24 +230,30 @@ It has the following members:
 <tr>
 <td><p><span class="term"><code class="constant">add_edges</code>:</span></p></td>
 <td><p>
-  Called when new edges have been added. The number
-   of new edges are supplied as well. It is expected to return an
-   error code.
+  Called when new edges are added to a graph, after the
+   base data structure was modified. A vector containing the endpoints of the
+   new edges are supplied as an argument. The function is supposd to set up
+   default values for each edge attribute that is currently registered on the
+   graph, for all the newly added edges. Expected to return an error code.
 </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><code class="constant">permute_edges</code>:</span></p></td>
 <td><p>
-  Called when a new graph is created and
-   some of the new edges should carry the attributes of some of the
-   old edges. The idx vector shows the mapping between the old edges and
-   the new ones. Its length is the same as the number of edges in the new
-   graph, and for each edge it gives the ID of the old edge (the edge in
-   the old graph). Note that the old and the new graph instances <span class="emphasis"><em>may</em></span>
-   be the same. If the two graph instances are <span class="emphasis"><em>not</em></span> the same, implementors
-   may safely assume that the new graph has no edge attributes yet (but it
-   may already have graph or vertex attributes by the time this function is
-   called).
+  Called when a new graph is created based on an
+   existing one such that some of the edges in the new graph should copy the
+   attributes of some edges from the old graph (this also includes the
+   deletion of edges). The supplied index vector defines which old edge a new
+   edge corresponds to. Its length is the same as the number of edges in the
+   new graph, and for each edge it provides the ID of the correspnding edge
+   in the old graph. The function is supposed to set up the values of the
+   edge attributes of the new graph based on the attributes of the old graph
+   and the provided index vector. Note that the old and the new graph <span class="emphasis"><em>may</em></span>
+   be the same, in which case it is the responsibility of the function to
+   ensure that the operation can safely be performed in-place. If the two
+   graph instances are <span class="emphasis"><em>not</em></span> the same, implementors may safely assume that
+   the new graph has no edge attributes yet (but it may already have graph or
+   vertex attributes by the time this function is called).
 </p></td>
 </tr>
 <tr>
@@ -273,7 +285,7 @@ It has the following members:
 </p></td>
 </tr>
 <tr>
-<td><p><span class="term"><code class="constant">gettype</code>:</span></p></td>
+<td><p><span class="term"><code class="constant">get_type</code>:</span></p></td>
 <td><p>
   Query the type of a graph/vertex/edge attribute.
 </p></td>
@@ -282,77 +294,91 @@ It has the following members:
 <td><p><span class="term"><code class="constant">get_numeric_graph_attr</code>:</span></p></td>
 <td><p>
   Query a numeric graph attribute. The
-   value should be placed as the first element of the <em class="parameter"><code>value</code></em>
-   vector.
+   value should be appended to the provided <em class="parameter"><code>value</code></em> vector. No assumptions
+   should be made about the initial contents of the <em class="parameter"><code>value</code></em> vector and it is
+   not guaranteed to be empty.
 </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><code class="constant">get_string_graph_attr</code>:</span></p></td>
 <td><p>
   Query a string graph attribute. The
-   value should be placed as the first element of the <em class="parameter"><code>value</code></em>
-   string vector.
+   value should be appended to the provided <em class="parameter"><code>value</code></em> vector. No assumptions
+   should be made about the initial contents of the <em class="parameter"><code>value</code></em> vector and it is
+   not guaranteed to be empty.
 </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><code class="constant">get_bool_graph_attr</code>:</span></p></td>
 <td><p>
   Query a boolean graph attribute. The
-   value should be placed as the first element of the <em class="parameter"><code>value</code></em>
-   boolean vector.
+   value should be appended to the provided <em class="parameter"><code>value</code></em> vector. No assumptions
+   should be made about the initial contents of the <em class="parameter"><code>value</code></em> vector and it is
+   not guaranteed to be empty.
 </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><code class="constant">get_numeric_vertex_attr</code>:</span></p></td>
 <td><p>
   Query a numeric vertex attribute,
-   for the vertices included in <em class="parameter"><code>vs</code></em>.
+   for the vertices included in <em class="parameter"><code>vs</code></em>. The attribute values should be
+   appended to the provided <em class="parameter"><code>value</code></em> vector. No assumptions should be made
+   about the initial contents of the <em class="parameter"><code>value</code></em> vector and it is not guaranteed
+   to be empty.
 </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><code class="constant">get_string_vertex_attr</code>:</span></p></td>
 <td><p>
   Query a string vertex attribute,
-   for the vertices included in <em class="parameter"><code>vs</code></em>.
+   for the vertices included in <em class="parameter"><code>vs</code></em>. The attribute values should be
+   appended to the provided <em class="parameter"><code>value</code></em> vector. No assumptions should be made
+   about the initial contents of the <em class="parameter"><code>value</code></em> vector and it is not guaranteed
+   to be empty.
 </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><code class="constant">get_bool_vertex_attr</code>:</span></p></td>
 <td><p>
   Query a boolean vertex attribute,
-   for the vertices included in <em class="parameter"><code>vs</code></em>.
+   for the vertices included in <em class="parameter"><code>vs</code></em>. The attribute values should be
+   appended to the provided <em class="parameter"><code>value</code></em> vector. No assumptions should be made
+   about the initial contents of the <em class="parameter"><code>value</code></em> vector and it is not guaranteed
+   to be empty.
 </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><code class="constant">get_numeric_edge_attr</code>:</span></p></td>
 <td><p>
   Query a numeric edge attribute, for
-   the edges included in <em class="parameter"><code>es</code></em>.
+   the edges included in <em class="parameter"><code>es</code></em>. The attribute values should be appended
+   to the provided <em class="parameter"><code>value</code></em> vector. No assumptions should be made
+   about the initial contents of the <em class="parameter"><code>value</code></em> vector and it is not guaranteed
+   to be empty.
 </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><code class="constant">get_string_edge_attr</code>:</span></p></td>
 <td><p>
   Query a string edge attribute, for the
-   edges included in <em class="parameter"><code>es</code></em>.
+   the edges included in <em class="parameter"><code>es</code></em>. The attribute values should be appended
+   to the provided <em class="parameter"><code>value</code></em> vector. No assumptions should be made
+   about the initial contents of the <em class="parameter"><code>value</code></em> vector and it is not guaranteed
+   to be empty.
 </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><code class="constant">get_bool_edge_attr</code>:</span></p></td>
 <td><p>
   Query a boolean edge attribute, for the
-   edges included in <em class="parameter"><code>es</code></em>.</p></td>
+   the edges included in <em class="parameter"><code>es</code></em>. The attribute values should be appended
+   to the provided <em class="parameter"><code>value</code></em> vector. No assumptions should be made
+   about the initial contents of the <em class="parameter"><code>value</code></em> vector and it is not guaranteed
+   to be empty.</p></td>
 </tr>
 </tbody>
 </table></div>
-<p>
-Note that the <code class="function">get_*_*_attr</code> are allowed to
-convert the attributes to numeric or string. E.g. if a vertex attribute
-is a GNU R complex data type, then
-<code class="function">get_string_vertex_attribute</code> may serialize it
-into a string, but this probably makes sense only if
-<code class="function">add_vertices</code> is able to deserialize it.
- 
+<p> 
 </p>
 </div>
 <div class="section">
@@ -1227,7 +1253,7 @@ Time complexity: operating system dependent.
 a single one. Attribute combination lists are used to indicate to the attribute
 handler how to combine the attributes of the original vertices or edges and
 how to derive the final attribute value that is to be assigned to the collapsed
-vertex or edge. For example, <a class="link" href="igraph-Operators.html#igraph_simplify" title="3.8. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a> removes loops and combines
+vertex or edge. For example, <a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a> removes loops and combines
 multiple edges into a single one; in case of a graph with an edge attribute
 named <code class="constant">weight</code> the attribute combination list can tell the attribute handler
 whether the weight of a collapsed edge should be the sum, the mean or some other
@@ -1696,7 +1722,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
                                  "type",   IGRAPH_ATTRIBUTE_COMBINE_FIRST,
                                  "",       IGRAPH_ATTRIBUTE_COMBINE_IGNORE,
                                  IGRAPH_NO_MORE_ATTRIBUTES);
-    <span class="strong"><strong><a class="link" href="igraph-Operators.html#igraph_simplify" title="3.8. igraph_simplify — Removes loop and/or multiple edges from the graph.">igraph_simplify</a></strong></span>(&amp;graph, <span class="emphasis"><em>/*remove_multiple=*/</em></span> true, <span class="emphasis"><em>/*remove_loops=*/</em></span> true, &amp;comb);
+    <span class="strong"><strong><a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph.">igraph_simplify</a></strong></span>(&amp;graph, <span class="emphasis"><em>/*remove_multiple=*/</em></span> true, <span class="emphasis"><em>/*remove_loops=*/</em></span> true, &amp;comb);
     <span class="strong"><strong><a class="link" href="igraph-Foreign.html#igraph_write_graph_graphml" title="3.2. igraph_write_graph_graphml — Writes the graph to a file in GraphML format.">igraph_write_graph_graphml</a></strong></span>(&amp;graph, stdout, <span class="emphasis"><em>/*prefixattr=*/</em></span> true);
 
     <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;graph);
@@ -1950,7 +1976,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
 }
 
 <span class="strong"><strong>static</strong></span> void <span class="strong"><strong>simplify_write_destroy</strong></span>(igraph_t *g, igraph_attribute_combination_t *comb) {
-    <span class="strong"><strong><a class="link" href="igraph-Operators.html#igraph_simplify" title="3.8. igraph_simplify — Removes loop and/or multiple edges from the graph.">igraph_simplify</a></strong></span>(g, <span class="emphasis"><em>/*remove_multiple=*/</em></span> true, <span class="emphasis"><em>/*remove_loops=*/</em></span> true, comb);
+    <span class="strong"><strong><a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph.">igraph_simplify</a></strong></span>(g, <span class="emphasis"><em>/*remove_multiple=*/</em></span> true, <span class="emphasis"><em>/*remove_loops=*/</em></span> true, comb);
     <span class="strong"><strong><a class="link" href="igraph-Foreign.html#igraph_write_graph_graphml" title="3.2. igraph_write_graph_graphml — Writes the graph to a file in GraphML format.">igraph_write_graph_graphml</a></strong></span>(g, stdout, <span class="emphasis"><em>/*prefixattr=*/</em></span> true);
     <span class="strong"><strong><a class="link" href="igraph-Attributes.html#igraph_attribute_combination_destroy" title="3.4. igraph_attribute_combination_destroy — Destroy attribute combination list.">igraph_attribute_combination_destroy</a></strong></span>(comb);
     <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(g);
@@ -2029,7 +2055,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
 <pre class="programlisting"><span class="strong"><strong>#include</strong></span> &lt;igraph.h&gt;
 
 <span class="strong"><strong>static</strong></span> void <span class="strong"><strong>simplify_write_destroy</strong></span>(igraph_t *g, igraph_attribute_combination_t *comb) {
-    <span class="strong"><strong><a class="link" href="igraph-Operators.html#igraph_simplify" title="3.8. igraph_simplify — Removes loop and/or multiple edges from the graph.">igraph_simplify</a></strong></span>(g, <span class="emphasis"><em>/*remove_multiple=*/</em></span> true, <span class="emphasis"><em>/*remove_loops=*/</em></span> true, comb);
+    <span class="strong"><strong><a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph.">igraph_simplify</a></strong></span>(g, <span class="emphasis"><em>/*remove_multiple=*/</em></span> true, <span class="emphasis"><em>/*remove_loops=*/</em></span> true, comb);
     <span class="strong"><strong><a class="link" href="igraph-Foreign.html#igraph_write_graph_graphml" title="3.2. igraph_write_graph_graphml — Writes the graph to a file in GraphML format.">igraph_write_graph_graphml</a></strong></span>(g, stdout, <span class="emphasis"><em>/*prefixattr=*/</em></span> true);
     <span class="strong"><strong><a class="link" href="igraph-Attributes.html#igraph_attribute_combination_destroy" title="3.4. igraph_attribute_combination_destroy — Destroy attribute combination list.">igraph_attribute_combination_destroy</a></strong></span>(comb);
     <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(g);
@@ -2282,7 +2308,7 @@ igraph_bool_t igraph_cattribute_has_attr(const igraph_t *graph,
 <tbody><tr>
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
-  Logical value, <code class="constant">true</code> if the attribute exists, <code class="constant">false</code> otherwise.
+  Boolean value, <code class="constant">true</code> if the attribute exists, <code class="constant">false</code> otherwise.
   </p></td>
 </tr></tbody>
 </table></div>
