--- a/c/html/master/igraph-Basic.html
+++ b/c/html/master/igraph-Basic.html
@@ -99,7 +99,7 @@ graphs with self-loops. Most functions which do not support such graphs
 will check their input and issue an error if it is not valid. Those
 rare functions which do not perform this check clearly indicate this
 in their documentation. To eliminate multiple edges from a graph, you can use
-<a class="link" href="igraph-Operators.html#igraph_simplify" title="3.8. igraph_simplify — Removes loop and/or multiple edges from the graph.">
+<a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph.">
   <code class="function">igraph_simplify()</code></a>.
 </p>
 </div>
@@ -807,7 +807,7 @@ igraph_bool_t igraph_is_directed(const igraph_t *graph);
 <tbody><tr>
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
-  Logical value, <code class="constant">true</code> if the graph is directed,
+  Boolean value, <code class="constant">true</code> if the graph is directed,
 <code class="constant">false</code> otherwise.
   </p></td>
 </tr></tbody>
