--- a/c/html/master/igraph-Cliques.html
+++ b/c/html/master/igraph-Cliques.html
@@ -96,7 +96,7 @@ The null graph and the singleton graph are considered complete.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>res</code></em>:</span></p></td>
 <td><p>
-  Pointer to a logical variable, the result will be stored here.</p></td>
+  Pointer to a Boolean variable, the result will be stored here.</p></td>
 </tr>
 </tbody>
 </table></div>
