--- a/c/html/master/igraph-Cycles.html
+++ b/c/html/master/igraph-Cycles.html
@@ -136,7 +136,8 @@ vertices and edges in the original input graph.
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
   <a class="link" href="igraph-Cycles.html#igraph_is_acyclic" title="1.5. igraph_is_acyclic — Checks whether a graph is acyclic or not."><code class="function">igraph_is_acyclic()</code></a> to determine if a graph is acyclic,
-without returning a specific cycle.
+without returning a specific cycle; <a class="link" href="igraph-Cycles.html#igraph_simple_cycles" title="1.2. igraph_simple_cycles — Finds all simple cycles."><code class="function">igraph_simple_cycles()</code></a>
+to list all cycles in a graph.
   </p></td>
 </tr></tbody>
 </table></div>
@@ -251,7 +252,8 @@ SIAM J. Comput. 4(1):77-84.
 <tbody><tr>
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
-  <a class="link" href="igraph-Cycles.html#igraph_simple_cycles" title="1.2. igraph_simple_cycles — Finds all simple cycles."><code class="function">igraph_simple_cycles()</code></a> to call a function for each found cycle;
+  <a class="link" href="igraph-Cycles.html#igraph_simple_cycles_callback" title="1.3. igraph_simple_cycles_callback — Finds all simple cycles (callback version)."><code class="function">igraph_simple_cycles_callback()</code></a> to call a function for each found
+cycle;
 <a class="link" href="igraph-Cycles.html#igraph_find_cycle" title="1.1. igraph_find_cycle — Finds a single cycle in the graph."><code class="function">igraph_find_cycle()</code></a> to find a single cycle;
 <a class="link" href="igraph-Cycles.html#igraph_fundamental_cycles" title="3.1. igraph_fundamental_cycles — Finds a fundamental cycle basis."><code class="function">igraph_fundamental_cycles()</code></a> and <a class="link" href="igraph-Cycles.html#igraph_minimum_cycle_basis" title="3.2. igraph_minimum_cycle_basis — Computes a minimum weight cycle basis."><code class="function">igraph_minimum_cycle_basis()</code></a>
 to find a cycle basis, a compact representation of the cycle structure
@@ -496,7 +498,8 @@ igraph_error_t igraph_is_acyclic(const igraph_t *graph, igraph_bool_t *res);
 
 
 
-This function checks whether a graph is acyclic or not.
+This function checks whether a graph has any cycles. Edge directions are
+considered, i.e. in directed graphs, only directed cycles are searched for.
 
 </p>
 <p><b>Arguments: </b>
@@ -550,7 +553,8 @@ This function checks whether a graph is acyclic or not.
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
   <a class="link" href="igraph-Cycles.html#igraph_find_cycle" title="1.1. igraph_find_cycle — Finds a single cycle in the graph."><code class="function">igraph_find_cycle()</code></a> to find a cycle that demonstrates
-that the graph is not acyclic.
+that the graph is not acyclic; <a class="link" href="igraph-Structural.html#igraph_is_forest" title="15.6. igraph_is_forest — Decides whether the graph is a forest."><code class="function">igraph_is_forest()</code></a> to look
+for undirected cycles even in directed graphs.
   </p></td>
 </tr></tbody>
 </table></div>
