--- a/c/html/master/igraph-Flows.html
+++ b/c/html/master/igraph-Flows.html
@@ -1860,7 +1860,7 @@ density, Sociological Methodology 31:305--359, 2001
 <tr>
 <td><p><span class="term"><em class="parameter"><code>checks</code></em>:</span></p></td>
 <td><p>
-  Logical constant. Whether to check that the graph is
+  Boolean constant. Whether to check that the graph is
    connected and also the degree of the vertices. If the graph is
    not (strongly) connected then the connectivity is obviously zero. Otherwise
    if the minimum degree is one then the edge connectivity is also
@@ -2083,7 +2083,7 @@ conditional density, Sociological Methodology 31:305--359, 2001
 <tr>
 <td><p><span class="term"><em class="parameter"><code>checks</code></em>:</span></p></td>
 <td><p>
-  Logical constant. Whether to check if the graph is
+  Boolean constant. Whether to check if the graph is
    connected or complete and also the degree of the vertices. If the graph is
    not (strongly) connected then the connectivity is obviously zero. Otherwise
    if the minimum degree is 1 then the vertex connectivity is also
@@ -2399,7 +2399,7 @@ with uniform edge weights.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>checks</code></em>:</span></p></td>
 <td><p>
-  Logical constant. Whether to check that the graph is
+  Boolean constant. Whether to check that the graph is
    connected and also the degree of the vertices. If the graph is
    not (strongly) connected then the adhesion is obviously zero. Otherwise
    if the minimum degree is one then the adhesion is also
@@ -2496,7 +2496,7 @@ and it is the same as the vertex connectivity of a graph.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>checks</code></em>:</span></p></td>
 <td><p>
-  Logical constant. Whether to check that the graph is
+  Boolean constant. Whether to check that the graph is
    connected and also the degree of the vertices. If the graph is
    not (strongly) connected then the cohesion is obviously zero. Otherwise
    if the minimum degree is one then the cohesion is also
