--- a/c/html/master/igraph-Isomorphism.html
+++ b/c/html/master/igraph-Isomorphism.html
@@ -139,7 +139,7 @@ something more sophisticated, e.g. you need the isomorphic mapping.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>iso</code></em>:</span></p></td>
 <td><p>
-  Pointer to a logical variable, will be set to <code class="constant">true</code>
+  Pointer to a Boolean variable, will be set to <code class="constant">true</code>
        if the two graphs are isomorphic, and <code class="constant">false</code> otherwise.
 </p></td>
 </tr>
@@ -1016,7 +1016,7 @@ for that.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>iso</code></em>:</span></p></td>
 <td><p>
-  Pointer to a logical constant, the result of the
+  Pointer to a Boolean constant, the result of the
    algorithm will be placed here.
 </p></td>
 </tr>
@@ -2953,7 +2953,7 @@ undirected graphs are supported.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
-  Logical constant, whether to create a directed
+  Boolean constant, whether to create a directed
        graph.
 </p></td>
 </tr>
@@ -3261,7 +3261,7 @@ vertex and edge colors.
 <tbody><tr>
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
-  <a class="link" href="igraph-Operators.html#igraph_simplify" title="3.8. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a>, <a class="link" href="igraph-Isomorphism.html#igraph_isomorphic_vf2" title="3.1. igraph_isomorphic_vf2 — Isomorphism via VF2."><code class="function">igraph_isomorphic_vf2()</code></a>, <a class="link" href="igraph-Isomorphism.html#igraph_subisomorphic_vf2" title="3.7. igraph_subisomorphic_vf2 — Decide subgraph isomorphism using VF2"><code class="function">igraph_subisomorphic_vf2()</code></a>
+  <a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a>, <a class="link" href="igraph-Isomorphism.html#igraph_isomorphic_vf2" title="3.1. igraph_isomorphic_vf2 — Isomorphism via VF2."><code class="function">igraph_isomorphic_vf2()</code></a>, <a class="link" href="igraph-Isomorphism.html#igraph_subisomorphic_vf2" title="3.7. igraph_subisomorphic_vf2 — Decide subgraph isomorphism using VF2"><code class="function">igraph_subisomorphic_vf2()</code></a>
   </p></td>
 </tr></tbody>
 </table></div>
