--- a/c/html/master/index.html
+++ b/c/html/master/index.html
@@ -63,9 +63,9 @@ langversion: master
 </div>
 </div>
 </div></div>
-<div><p class="releaseinfo">0.10.15-105-ga68d7cafc</p></div>
+<div><p class="releaseinfo">0.10.16-1-g4b18e606d</p></div>
 <div><div class="legalnotice">
-<a name="id-1.1.4"></a><p>This manual is for igraph, version 0.10.15-105-ga68d7cafc.</p>
+<a name="id-1.1.4"></a><p>This manual is for igraph, version 0.10.16-1-g4b18e606d.</p>
 <p>
       Copyright (C) 2005-2019 Gábor Csárdi and Tamás Nepusz.
       Copyright (C) 2020-2025 igraph development team.
